- In editor popup menus, don't show score options in keyboard mode
- Fixed docking tracks, which was broken in last release
- Made 'follow playback' easier to follow by scrolling only on measure change
- Fixed undoing guitar tuning changes
- When printing multiple tracks, draw a line between them to make clear they belong toghether
- Added ability to maximize tracks
- Improved handling of on/off controllers, namely making sustain usable.
- More layout and rendering improvements to score printing
- Added keyboard shortcuts for more menu elements
- Added built-in docs viewer on mac

1.2b3
- Refactored preferences to look better, be cleaner and allow setting a default value for "follow playback"
- Updated render code in hope to fix rounding errors on some graphics card
- Fixed items wrongly disabled in key picker
- Dynamic repartition of height when printing
- Don't give error messages when cancelling printing
- Better horizontal distribution when printing
- Fixed beaming problems when using multiple time signatures
- Added new time sig picker, making the interface much nicer when using multiple key sigs
- Added pause button
- Clicking in the blank area of the horizontal scrollbar will move by one measure (instead of a few pixels)
- Improved scale dialog
- Bug fixes in dialog cleanup
- Made it easier to add new notes (cursor less likely to switch to selection, and possibility to go back)

1.2b2
- Fixed issues with track reordering
- Magnetic grid choice done with icons instead of text
- Improved score printing (nicer-looking, both F and G clefs supported, adaptable height, notes above or below score, fixed crashes...)
- Fixed bug in score printing where the first page would be a bunch filled with garbage
- G or F clef view preference saved
- Improved display and printing of ties on chords
- Fixed bug with magnetic grid when using manual measure management + a very small measure (e.g. 1/16)
- Code cleanup

1.2b1
- Added ability to print more than one track at once