@@ -125,7 +125,7 @@ public:
     float zoom;
     int width_in_units;
 
-    // filled by EditorPrintable::getNextElement() as the X position is calculated in
+    // filled by EditorPrintable::continueWithNextElement() as the X position is calculated in
     // case location is needed later (for instance, if more than one rendering pass)
     int x, x2;
 };
